--- a/app/src/main/res/layout/linear_scouting_page.xml
+++ b/app/src/main/res/layout/linear_scouting_page.xml
@@ -125,7 +125,7 @@
                 android:text="Save Team"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/button" />
+                android:id="@+id/saveTeamButton" />
 
         </LinearLayout>
     </ScrollView>
