--- a/app/src/main/res/layout/team_list.xml
+++ b/app/src/main/res/layout/team_list.xml
@@ -11,9 +11,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.frcscoutingapp2017.MainActivity">
 
+    <Button
+        android:text="Add Team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addTeam"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_above="@+id/addTeam"
+        android:id="@+id/list"/>
 </RelativeLayout>
