--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/teamNumber"
-        android:hint="Team Number"
-        android:layout_above="@+id/signInButton"
+        android:id="@+id/email"
+        android:hint="Email"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -48,18 +48,18 @@
         android:ems="10"
         android:id="@+id/password"
         android:hint="Password"
-        android:layout_above="@+id/teamNumber"
+        android:layout_below="@+id/email"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"/>
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         android:ems="10"
-        android:id="@+id/email"
-        android:hint="Email"
-        android:layout_above="@+id/password"
+        android:id="@+id/teamNumber"
+        android:hint="Team Number"
+        android:layout_below="@+id/password"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
 
@@ -68,7 +68,8 @@
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/teamNumber"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="62dp"/>
+
 </RelativeLayout>
