--- a/app/src/main/res/layout/adapter_view.xml
+++ b/app/src/main/res/layout/adapter_view.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:id="@+id/linLay">
     <TextView
-            android:id="@+id/teamName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"/>
+        android:id="@+id/teamName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="36sp"/>
     <TextView
-            android:id="@+id/teamNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HomeTown"/>
+        android:id="@+id/teamNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HomeTown"
+        tools:textSize="36sp"/>
 </LinearLayout>
