--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.frcscoutingapp2017.MainActivity">
+    tools:context="com.example.frcscoutingapp2017.MainActivity"
+    android:background="#B78A47">
 
     <Button
         android:text="Register"
@@ -37,6 +38,8 @@
         android:ems="10"
         android:id="@+id/email"
         android:hint="Email"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
@@ -48,6 +51,8 @@
         android:ems="10"
         android:id="@+id/password"
         android:hint="Password"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:layout_below="@+id/email"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
@@ -59,6 +64,8 @@
         android:ems="10"
         android:id="@+id/teamNumber"
         android:hint="Team Number"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:layout_below="@+id/password"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
@@ -66,10 +73,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@mipmap/first_steamworks"
         android:id="@+id/imageView"
-        android:layout_below="@+id/teamNumber"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="62dp"/>
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
