--- a/app/src/main/res/layout/linear_scouting_page.xml
+++ b/app/src/main/res/layout/linear_scouting_page.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#B78A47"
     tools:context="com.example.frcscoutingapp2017.MainActivity">
 
     <ScrollView
